fix action buttons default background colors on mobile

--- a/src/scss/modules/TaskItem.module.scss
+++ b/src/scss/modules/TaskItem.module.scss
@@ -150,6 +150,7 @@
   &_button {
     border: 0;
     cursor: pointer;
+    background-color: transparent;
     transition: opacity $transitionTime ease;
 
     svg {
